space gap issue solved

--- a/src/Components/Graph/Graph.css
+++ b/src/Components/Graph/Graph.css
@@ -5,7 +5,6 @@
     padding: 14px;
     border-radius: 15px;
     font-size: 19px;
-    word-break:break-all;
     white-space:unset;
     text-align: center;
 }
